# class-bot

./: Cargo.toml  justfile  shell.nix
.github/workflows/: rust.yml
src/: apricot_api.rs  lib.rs  main.rs
src/apricot_api/: events.rs
